# SlangWorld

./: .clang-format  .envrc  .gitignore  README.md  format.sh  out.slim  slang.py  test.slap  test.slim  test2.slap  todo.md
slap/: auto.sh  build.sh  test.slap
slap/source/: Slap.py  SlapLog.py  SlapUtil.py
slap/source/assembler/: SlapAssembler.py  SlapByteWriter.py  SlapProgram.py
slap/source/grammar/: Slap.g4
slap/source/log/: SlapLog.py
slap/source/symbol/: SlapSymbol.py  SlapSymbolResolver.py  SlapSymbolTabulator.py  SlapSymbolValidator.py
slim/: CMakeLists.txt  auto.sh  build.sh  test.sh
slim/include/: SlimBytecode.h  SlimData.h  SlimFile.h  SlimLog.h  SlimMachine.h  SlimNative.h  SlimNativeInterface.h  SlimPlatform.h  SlimType.h
slim/source/: SlimBytecode.c  SlimData.c  SlimFile.c  SlimLog.c  SlimMachine.c  SlimNative.c  SlimNativeUser.c  SlimPlatform.c  SlimPlatform.h  SlimRoutine.c  SlimType.h  Testing.c  cmd.c  slim.c  slim.h  test.c
slim/source/log/: SlimLog.c  SlimLog.h
slim/source/machine/: SlimMachine.c  SlimMachine.h  SlimRoutine.c  SlimRuntime.c  SlimRuntime.h
slim/source/native/: SlimNative.c  SlimNative.h  SlimNativeUser.c
